src/test/resources/functionly/bad/semantic/bad4.fly
public function bad44()
begin
  return y;
end
